Frankbelford/uatv1ba/force-app/main/default/objects/Reference_Period__c/Reference_Period__c.object-meta.xml
<CustomObject>
    <description>Driving reference period</description>
    <label>Reference Period</label>
    <nameField>
        <label>Reference Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reference Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>