Frankbelford/uatv1ba/force-app/main/default/objects/Reference_Period__c/fields/Allowed_Hours__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Hours__c</fullName>
    <defaultValue>1248</defaultValue>
    <inlineHelpText>Total hours allowed to drive during this period.</inlineHelpText>
    <label>Allowed Hours</label>
    <precision>9</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>