Frankbelford/uatv1ba/force-app/main/default/objects/Reference_Period__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <formula>Start_Date__c + ((26 * 7) - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The end date (inclusive) of this driving reference period.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>